# Fractal-Dimension-Computation

./: .gitignore  CMakeLists.txt  FastDBC.cpp  FastDBC.h  FastDBC_GPU.cu  FastDBC_GPU.cuh  LICENSE  Makefile  README.md  Wrapper.ipynb  bcCPU.cpp  bcCUDA2D.cu  bcCUDA2D.cuh  main.cpp  main_GPU.cpp
